# doclens

./: .gitignore  CLAUDE.md  GLM服务端搜索.md  MAINTENANCE.md  README.md  cortex.bat  cortex.ps1  frontend-design.md  pyproject.toml  requirements.txt  run_first5_tests.py  search_results_byd.txt  search_results_csdn.txt  search_results_csdn2.txt  search_results_gov.txt  search_results_zai.txt  start-cortex.ps1  test_case.json  test_plan.md  test_skill_subprocess.md  test_watcher.py  web_search.py  web_search.sh  web_search_gov_result.txt  web_search_nodejs_result.txt  中国AI词元调用量爆发式增长.md  笔记.md
.claude/: settings.local.json
.playwright-cli/: page-2026-06-23T01-56-24-569Z.yml  page-2026-06-23T01-56-42-135Z.yml  page-2026-06-23T01-57-13-023Z.yml  page-2026-06-23T02-02-27-775Z.yml  page-2026-06-23T02-08-55-917Z.yml  page-2026-06-23T02-09-45-043Z.yml  page-2026-06-24T02-45-42-525Z.yml  page-2026-06-24T04-34-18-686Z.yml  page-2026-06-24T04-35-00-493Z.yml  page-2026-06-24T04-35-35-788Z.yml  page-2026-06-24T04-49-46-737Z.yml  page-2026-06-24T04-50-23-092Z.yml  page-2026-06-24T05-21-33-745Z.yml  page-2026-06-24T05-21-46-879Z.yml  page-2026-06-24T05-22-22-001Z.yml  page-2026-06-24T05-22-49-859Z.yml  page-2026-06-24T05-25-37-192Z.yml  page-2026-06-24T05-26-56-850Z.yml  page-2026-06-24T05-27-28-579Z.yml  page-2026-06-24T05-28-19-237Z.yml  page-2026-06-24T05-31-54-852Z.yml  page-2026-06-24T05-32-16-415Z.yml  page-2026-06-24T05-32-16-752Z.yml  page-2026-06-24T05-32-20-336Z.yml  page-2026-06-24T05-33-05-943Z.yml  page-2026-06-24T06-06-43-891Z.yml  page-2026-06-24T06-07-31-205Z.yml
cortex/: .env.example  __init__.py  __main__.py  agent_integration.py  config.py  cortex_cli.py  event_bus.py  events.py  file_watcher.py  grep_tools.py  index_manager.py  kb_tools.py  notebook_search.py  notebook_search_readme.md  ripgrep.py  scoring.py  scoring_pipeline.py  test_plan.json  test_results.md  test_results_p0.json  test_results_p123.json  test_results_q.json  test_results_template.md  test_runner_fixed.py  test_runner_p0.py  test_runner_p123.py  test_runner_q.py
cortex/tui/: __init__.py  app.py  command_registry.py  commands.py  theme.py
cortex/web/: app.py  chat_tab.py  deps.py  emitter.py  search_tab.py  theme.py
cortex/web_v2/: app.py  config_store.py  config_validator.py  deps.py  path_safety.py  sessions_store.py
doclens/: agent_integration.py  cortex_cli.py  cortex_cli_readme.md  file_watcher.py  formatting.py  grep_tools.py  index_manager.py  kb_tools.py  scoring.py  scoring_pipeline.py  test_results.md  test_runner_fixed.py  test_runner_p0.py  test_runner_p123.py  test_runner_q.py  test_task.md
doclens/tui/: app.py  commands.py
doclens/web_v2/: app.py  config_validator.py  deps.py  path_safety.py  preview_synthesizer.py
examples/: test_notebook_search.py
planify/: .gitignore  INTEGRATION.md  README.md  SIMPLIFIED.md  bootstrap.py  bootstrap_api_changes.md  cli.py  cli_history.py  examples.md  main.py  prompts.py  streaming_spec.md
planify/agent/: __init__.py  runner.py
planify/core/: __init__.py  client.py  config.py  encoding.py  logging_config.py  session.py  session_manager.py
planify/managers/: background_manager.py  task_manager.py  teammate_manager.py
planify/skills/: skill_loader.py
planify/streaming/: __init__.py  emitter.py  runner.py  types.py  waiter.py
planify/subagent/: runner.py
planify/tools/: __init__.py  baidu_weather.py  basic.py  lunar.py  registry.py  user_interaction.py  weather_tool.py  web.py  webfetch.py
samples/: 2026年全球经济形势分析.md  CRISPR基因治疗逆转肺癌耐药性.md  direct_collapse_blackholes.md  docker_kubernetes_guide.md  git_workflow.md  linux_system_admin.md  postgresql_optimization.md  react_hooks_guide.md  renewable_energy_record.md  running_marathon_guide.md  typescript_generics.md  中国可再生能源突破性进展.md  商业航天发展2025新纪元.md  固态电池技术进展与产业化.md  居家健身指南.md  睡眠科学如何获得高质量睡眠.md  肠道健康与益生菌科学指南.md  英伟达市值突破5万亿美元.md  营养素速查手册.html  量子计算与人工智能报告2025-2026.docx
samples/健康/: Z世代心理健康与保健品消费.md  meditation_beginner.md  中医理疗养生传统智慧的现代应用.md
samples/天文航天/: dark_matter_stars.md  嫦娥六号月球背面演化历史.md  韦伯望远镜揭示黑洞起源新理论.md
samples/生命科学/: crispr_lung_cancer.md  地球已知最深动物生态系统.md  深海生物新物种发现.md  生物技术新药2025前沿突破.md
samples/科技/: quantum_error_correction.md  智慧城市与物联网.md  机器人与AI融合2025年发展报告.md  网络安全与AI防御2025威胁态势.md
samples/经济/: 全球科技与健康数据.xlsx  全球贸易前景展望2025-2026.md
samples/编程/: Python数据科学与机器学习指南.md  api_design_rest.md
samples/能源环境/: 固态电池技术进展与产业化.md  太阳能与风能技术详解.html  气候变化与碳中和技术.md
specs/: search_page_spec.md  settings-page-mockup.html
study/: grep-logic.md  search-logic.md
test_work_dir/: test.md
test_work_dir/.playwright-cli/: page-2026-06-16T13-21-44-212Z.yml  page-2026-06-16T13-22-14-959Z.yml  page-2026-06-16T13-22-44-741Z.yml  page-2026-06-18T15-50-50-963Z.yml  page-2026-06-18T15-52-04-212Z.yml
test_work_dir/健康/: 2025年健康生活与科学养生指南.html  healthy_meal_prep.md  stress_management_work.md  体重管理年科学减重指南.md
test_work_dir/公司/: 中国联通广东省分公司通信网络应急预案-网络运营支撑系统分册.docx  广东网络研发中心通信录202509.xlsx  省本部行政后勤事务办事指南2026.3.13.docx  绿盟代码安全审计系统V7.0R01F04SP05用户手册.docx  网络新技术中心2026年员工晋升实施细则.docx
test_work_dir/生命科学/: brain_computer_interface_speech.md  哈尔滨古人类化石与丹尼索瓦人.md
test_work_dir/科技/: 2025网络安全趋势报告.html  5G与6G通信技术发展.md  AI伦理与治理.md  AI技术路线与产业应用.md  AI辅助教育重塑学习方式.md  元宇宙与VR_AR技术发展.md  量子密码学从QKD到后量子密码学.md  量子计算与人工智能演示.pptx
test_work_dir/编程/: microservices_patterns.md  python_async_programming.md  rust_ownership.md
test_work_dir/能源环境/: 中国新能源汽车市场2025.md  电动车电池技术对比.html
tests/: cortex_search_report.md  cortex_test_plan.md  cortex_test_report.md  test_case.json  test_case_kb.json  test_case_v2.json  test_cli_subcommands.py  test_cortex_cli.py  test_cortex_cli_main.py  test_cortex_search.py  test_event_bus.py  test_indexer.py  test_report_0509_001.md  test_report_0509_002.md  test_report_0526_001.md  test_report_template.md  test_tui_app.py  test_tui_commands.py
tests/treesearch/: test_excel_parser.py
treesearch/: cli.py  config.py  fts.py  indexer.py  pathutil.py  ripgrep.py  search.py  treesearch.py
unit-test/: conftest.py  test_e2e_ai.py  test_e2e_search.py  test_e2e_watch.py
(+442 files in other folders)
