[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doclens"
version = "1.1.0"
description = "Structure-aware document retrieval. FTS5/BM25 keyword matching over document trees."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Lianghao", email = "zhlhao@163.com"},
]
keywords = ["doclens", "rag", "retrieval", "tree-search", "bm25", "fts5", "document-indexing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Indexing",
]
dependencies = [
    "aiosmtplib>=3.0.1",
    "anthropic>=0.25.0",
    "beautifulsoup4>=4.12.0",
    "borax>=4.1.0",
    "cryptography>=42.0.0",
    "dateparser>=1.2.0",
    "defusedxml>=0.7.1",
    "httpx>=0.27.1",
    "jieba>=0.42",
    "lxml>=5.0.0",
    "markitdown>=0.1.0",
    "openai>=1.10.0",
    "openpyxl>=3.1.0",
    "passlib[bcrypt]>=1.7.4",
    "pathspec>=0.11",
    "pdf2image>=1.16.3",
    "pdfplumber>=0.10.0",
    "Pillow>=10.0.0",
    "pydantic>=2.11.0,<3.0.0",
    "pydantic-settings>=2.5.2",
    "PyJWT[crypto]>=2.8.0,<2.9.0",
    "pypdf>=4.0.0",
    "python-docx>=1.0.0",
    "python-dotenv>=1.0.0",
    "python-jose[cryptography]>=3.3.0",
    "python-pptx>=1.0.0",
    "textual>=0.47.0",
    "tqdm>=4.42",
    "trafilatura>=2.0.0",
    "watchdog>=3.0",
    "XlsxWriter>=3.2.0",
]

[project.optional-dependencies]
fts5 = ["pysqlite3-binary>=0.5"]
treesitter = ["tree-sitter-languages>=1.10"]
langchain = ["langchain-core>=0.1"]
llamaindex = ["llama-index-core>=0.10"]
integrations = ["langchain-core>=0.1", "llama-index-core>=0.10"]
all = [
    "tree-sitter-languages>=1.10",
]
cortex = [
    "trafilatura>=2.0.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sse-starlette>=2.0.0",
    "python-multipart>=0.0.9",
    "ulid-py>=1.1",
]
playwright-browser = ["playwright>=1.40.0"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.1.0",
    "black>=24.1.1",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/zhlhaohao/doclens"
Repository = "https://github.com/zhlhaohao/doclens"
Issues = "https://github.com/zhlhaohao/doclens/issues"

[project.scripts]
treesearch = "treesearch.cli:main"
doclens = "doclens.cortex_cli:main"

[tool.setuptools.packages.find]
include = ["treesearch*", "doclens*", "planify*"]

# 非 .py 资源：前端 PWA 构建产物、配置模板、Agent skills。
# 缺少这个会导致 pip install 后 gui 找不到前端页面。
[tool.setuptools.package-data]
doclens = [
    "web_v2/static/**/*",
    ".env.example",
    "skills/**/*",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
